Fix content spacing issue (was out of alignment with sidebar)

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,7 +39,10 @@ header {
 
 /* Main Page */
 .content {
-  padding-top: $main-header-size;
+  padding-top: $subheader-size;
+  p {
+    margin-bottom: 1em;
+  }
 }
 .post {
   margin-bottom: $gutter-bottom;
@@ -54,10 +57,6 @@ header {
 
 .title {
   margin-bottom: $gutter-bottom;
-}
-
-.content p {
-  margin-bottom: 1em;
 }
 
 /* Post specific */
